--- a/1-Vue初体验/vue3-reserve-hidden.html
+++ b/1-Vue初体验/vue3-reserve-hidden.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vue3实现字符串的反转</title>
 </head>
-
 <body>
     <div id="root">
         <h1>{{content}}</h1>
     </div>
-    <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://unpkg.com/vue@next"></script>
     <script>
         Vue.createApp({
             data() {
                 return {
                     show: true,
-                    content: 'hello world',
-                }
+                    content: "hello world"
+                };
             },
             methods: {
                 handleBtnClick() {
                     // this.show = !this.show;
-                    this.content = this.content.split('').reverse().join('')
-                },
+                    this.content = this.content.split('').reverse().join('');
+                }
             },
             template: `
             <div>
@@ -33,8 +31,7 @@
                 <button v-on:click="handleBtnClick">反转</button>
             </div>
             `,
-        }).mount('#root')
+        }).mount("#root");
     </script>
 </body>
-
 </html>
