--- a/1-Vue初体验/vue3-todolist.html
+++ b/1-Vue初体验/vue3-todolist.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue3实现todolist -- 了解循环和双向绑定</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <div id="app"></div>
-    <script src="https://unpkg.com/vue@3"></script>
+    <div id="app">
 
+    </div>
+    <script src="https://unpkg.com/vue@next"></script>
     <script>
         Vue.createApp({
             data() {
                 return {
                     inputValue: '',
-                    list: ['1', '2', '3'],
-                }
+                    list: ["1", "2", "3"],
+                };
             },
             methods: {
-                handleBtnClick() {
-                    this.list.push(this.inputValue)
-                    this.inputValue = ''
-                },
+                handleAddItem() {
+                    this.list.push(this.inputValue);
+                    this.inputValue = '';
+                }
             },
             template: `
-                <div>
-                 <input v-model = "inputValue">
-                 <button v-on:click="handleBtnClick">增加</button>
+            <div>
+                <input v-model="inputValue">
+                <button v-on:click="handleAddItem">增加</button>
                 <ul>
                     <li v-for="(item,index) of list" :style="'color:'+(item>10?'red':'green')+';'">{{item}}</li>
                 </ul>
-                </div>
-            `,
-        }).mount('#app')
+            </div>
+            `
+        }).mount('#app');
     </script>
 </body>
-
 </html>
