--- a/1-Vue初体验/vue3-todolist组件化.html
+++ b/1-Vue初体验/vue3-todolist组件化.html
@@ -5,63 +5,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>vue3-todolist组件化</title>
 </head>
 
 <body>
-    <script src="https://unpkg.com/vue@3"></script>
-
     <div id="app"></div>
-
+    <script src="https://unpkg.com/vue@3"></script>
     <script>
+        //mvvm,vue实例，vue组件
         const app = Vue.createApp({
             data() {
                 return {
                     inputValue: '',
-                    list: [1, 2, 3],
-                    imageList: [{
-                        title: '1.jpg',
-                        src: './images/1.jpg',
-                    }, {
-                        title: '2.jpg',
-                        src: './images/2.jpg',
-                    }, {
-                        title: '3.jpg',
-                        src: './images/3.jpg',
-                    }, ],
+                    list: [],
                 }
             },
             methods: {
-                handleAdd() {
+                handleAddItem() {
                     this.list.push(this.inputValue)
                     this.inputValue = ''
                 },
             },
             template: `
         <div>
-            <input v-model="inputValue"/>
-            <button v-on:click="handleAdd" v-bind:title="inputValue">增加</button>
-            <url>
-                <todo-item v-for="(item,index) of list" v-bind:content="item" v-bind:index="index"/>
-                <image-card v-for="(item,index) of imageList" v-bind:src="item.src" v-bind:title="item.title"/>   
-            </url>
-        </div>
+            <input v-model = "inputValue">
+            <button v-on:click="handleAddItem" v-bind:title="inputValue">
+                增加
+            </button>
+            <ul>
+            <todo-item v-for = "(item,index) of list"
+             v-bind:content = "item"
+             v-bind:index = "index"
+            />
+
+            </ul>
+
+
+            </div>
         `,
         })
 
         app.component('todo-item', {
-            props: ['content', 'index'],
-            template: `<li>{{ index }}----{{ content }}</li>`,
-        })
-
-        app.component('image-card', {
-            props: ['src', 'title'],
-            template: ` <div >
-                <img :src="src" style="height:200px; width=200px;"/> 
-                        <h3>{{ title }}</h3>
-                        </div> 
-            
-            `,
+            props: ["content","index"],
+            template: '<li>{{index}}-{{content}}</li>',
         })
 
         app.mount('#app')
