动态样式绑定，表单数据绑定，计算属性和侦听器，补充条件判断和循环遍历

--- a/1-Vue初体验/vue3-todolist组件化.html
+++ b/1-Vue初体验/vue3-todolist组件化.html
@@ -46,7 +46,7 @@
         })
 
         app.component('todo-item', {
-            props: ["content","index"],
+            props: ['content', 'index'],
             template: '<li>{{index}}-{{content}}</li>',
         })
 
