--- a/2-Vue基础语法/4.3-调用时间格式化.html
+++ b/2-Vue基础语法/4.3-调用时间格式化.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>计数器例子</title>
-    <style>
-        [v-cloak]{
-            display: none;
-        }
-    </style>
+    <title>调用时间格式化</title>
 </head>
+
 <body>
     <div id="app">
-        <h2 v-cloak>当前count:{{count}}</h2>
-        <button @click = "add">add</button>
-        <button @click = "reduce">reduce</button>
+        <h2>当前时间：{{date}}</h2>
     </div>
     <script src="https://unpkg.com/vue@next"></script>
+    <script src="./js/date-format.js"></script>
     <script>
+        // console.log(dateForMat(new Date()))
         const app = Vue.createApp({
             data() {
                 return {
-                    count:0
+                    date: dateForMat(new Date())
                 }
             },
             methods: {
-                add(){
-                    this.count++;
-                },
-                reduce(){
-                    this.count--;
-                }
+
             },
         })
         const vm = app.mount('#app')
     </script>
 </body>
+
 </html>
